# Civilopedia-VI-Web-Scraping

./: README.md  main.py  prototyping_notebook.ipynb  pyproject.toml
core/: crawler.py
data/html_pages/: https___www_civilopedia_net_copyright.html  https___www_civilopedia_net_gathering-storm_buildings.html  https___www_civilopedia_net_gathering-storm_buildings_building_airport.html  https___www_civilopedia_net_gathering-storm_buildings_building_alchemical_society.html  https___www_civilopedia_net_gathering-storm_buildings_building_amphitheater.html  https___www_civilopedia_net_gathering-storm_buildings_building_aquarium.html  https___www_civilopedia_net_gathering-storm_buildings_building_aquatics_center.html  https___www_civilopedia_net_gathering-storm_buildings_building_arena.html  https___www_civilopedia_net_gathering-storm_buildings_building_armory.html  https___www_civilopedia_net_gathering-storm_buildings_building_bank.html  https___www_civilopedia_net_gathering-storm_buildings_building_barracks.html  https___www_civilopedia_net_gathering-storm_buildings_building_basilikoi_paides.html  https___www_civilopedia_net_gathering-storm_buildings_building_broadcast_center.html  https___www_civilopedia_net_gathering-storm_buildings_building_castle.html  https___www_civilopedia_net_gathering-storm_buildings_building_cathedral.html  https___www_civilopedia_net_gathering-storm_buildings_building_chancery.html  https___www_civilopedia_net_gathering-storm_buildings_building_coal_power_plant.html  https___www_civilopedia_net_gathering-storm_buildings_building_consulate.html  (+1094 more)
(+1112 files in other folders)
