[tool.poetry]
name = "civilopedia-vi-web-scraping"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
notebook = "^7.3.2"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
