[tool.poetry]
name = "civilopedia-vi-web-scraping"
version = "0.1.0"
description = ""
authors = ["PauloMarvin <paulo.marving@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
notebook = "7.3.2"
pydantic = "2.10.6"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
